# vmix-controller

./: .gitignore  Cargo.toml  README.md  example_state.xml  state.xml
.cargo/: config.toml
src/: client.rs  config.rs  main.rs  vmix.rs  xml.rs
twitch/: Cargo.toml
twitch/src/: client.rs
vmix/: Cargo.toml
vmix/src/: client.rs  lib.rs  xml.rs
youtube/: Cargo.toml
youtube/src/: client.rs  json.rs
