[package]
name = "vmix-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1.0.203", features = ["derive"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
