[package]
name = "vmix-controller"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
vmix = { path = "vmix" }


[workspace]
members = [ 
    "twitch",
    "vmix", 
    "youtube"
]

[workspace.dependencies]
serde = { version = "1.0.203", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
anyhow = "1.0.86"
