[package]
name = "vmix"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.12", features = ["blocking"] }
quick-xml = { version = "0.31.0", features = ["serialize"] }
